# techpark_dz1

./: ABC.txt  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  main.c  methods.c
.github/workflows/: ci.yml
calculate_side_length/: CMakeLists.txt  methods.c  methods.h  structures.h
linters/: run.sh
project/: CMakeLists.txt  main.c
project/calculate_side_length/: CMakeLists.txt  methods.c  methods.h  structures.h
project/tests/: CMakeLists.txt  calc_test.cpp
tests/: CMakeLists.txt  calc_test.cpp
