cmake_minimum_required(VERSION 3.0.0)
project(calculator_lib)

set(CALCULATOR_LIB_LIBRARIES)
set(CALCULATOR_LIB_INCLUDE_DIRS)

file(GLOB SOURCES *.c)
file(GLOB INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})

add_library(${PROJECT_NAME} STATIC ${SOURCES})

set(CALCULATOR_LIB_LIBRARIES ${PROJECT_NAME} PARENT_SCOPE)
set(CALCULATOR_LIB_INCLUDE_DIRS ${INCLUDE_DIRS} PARENT_SCOPE)

